--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,5 +58,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://eshopperz-backend-new.vercel.app/"
+  "proxy": "http://localhost:7000"
 }
